2012-12-30 Till Tantau <tantau@users.sourceforge.net>
	
	- Started adding support for calling C graph drawing functions
	from Lua.
	- First proof of concept for OGDF finished.
	- Must still address luatex shared library link problems.

2012-12-25 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- fixed bug in external lib: \tikzexternalgetnextfilename did reset the
	value of \tikzsetnextfilename and 'export next'

2012-11-30 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- updated driver pgfsys-xetex: now, it supports all that the new driver
	for dvipdfmx does which includes fadings, functional shadings, and
	patterns.

2012-11-30 Till Tantau <tantau@users.sourceforge.net>
	
	- First complete documentation of the graph drawing
	system. (Finally!) 
	
2012-11-27 Till Tantau <tantau@users.sourceforge.net>

	- Renamed gd files to shorter versions: instead of
	pgf/gd/model/pgf.gd.model.Edges.lua we now have
	pgf/gd/model/Edge.lua and so on.
	- Worked on gd documentation. Only binding doc is still a
	mess.
	
2012-11-26 Till Tantau <tantau@users.sourceforge.net>

	- Worked on gd documentation.
	
2012-11-21 Till Tantau <tantau@users.sourceforge.net>
	
	- New version of gd lib. The internals have been completely
	redone. In particular, no tikz libraries are needed for the
	individual algorithms any longer, all declarations are now
	done completely inside Lua. This makes gd usable (in
	principle) independently of tikz and pgf.
	- Because of this, all declarations of algorithms need to be
	redone. 

2012-11-10 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- external lib: fixed spurious white space (caused by 'up to date check')

2012-11-01 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- manual styles: improved robustness of auto cross references & active spaces

2012-10-18 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Fixed a bug with active colon in circuits lib. Probably more to