@@ -125,7 +125,7 @@ Let us start our tour of the algorithm layer with a ``hello world''
 version of graph drawing: An algorithm that simply places all nodes of
 a graph in a circle of a fixed radius. Naturally, this is not a
 particularly impressive or intelligent graph drawing algorithm; but
-neither is the classical ``hello world''\dots\ Here is a minimal
+neither is the classical ``hello world''$\dots$\ Here is a minimal
 version of the needed code (this is not the typical way of formulating
 the code, but it is the shortest; we will have a look at the more
 standard and verbose way in a moment):
@@ -416,7 +416,7 @@ table:
 \item |documentation| When present, this field contains a more
   extensive documentation of the key. It will also be shown in this
   manual, but typically not as a tool tip.
-\item |examples| This should either me a single string or an array of
+\item |examples| This should either be a single string or an array of
   strings. Each string should be an example demonstrating how the key
   is used in \tikzname. They will all be included in the manual, each
   surrounded by a |codeexample| environment.
@@ -452,7 +452,7 @@ and end with quotation marks, which will be removed. (This helps
 syntax hilighting with editors that do not recognize the |[[| to |]]|
 syntax.) Also, the indentation of the strings is removed (we compute
 the minimum number of leading spaces on any line and remove this many
-spaced from all lines).
+spaces from all lines).
 
 
 
