@@ -1,0 +1,81 @@
+% Copyright 2013 by Sarah Mäusle and Till Tantau
+%
+% This file may be distributed and/or modified
+%
+% 1. under the LaTeX Project Public License and/or
+% 2. under the GNU Free Documentation License.
+%
+% See the file doc/generic/pgf/licenses/LICENSE for more details.
+
+
+\section{Graph Drawing Layouts: Phylogenetic Trees}
+\label{section-library-graphdrawing-phylogenetics}
+
+{\noindent {\emph{by Sarah M\"ausle and Till Tantau}}}
+
+
+\tikzset{/graph drawing/phylogenetic inner node/.style={
+    /tikz/.cd,
+    draw, circle, inner sep=0pt, minimum size=5pt}
+}
+\tikzset{/graph drawing/phylogenetic edge/.style={
+    /tikz/.cd,
+    thick, rounded corners,edge node={node[auto,font=\tiny, inner  sep=2pt]{}}}
+}
+
+
+\includeluadocumentationof{pgf.gd.phylogenetics.library}
+\includeluadocumentationof{pgf.gd.phylogenetics.PhylogeneticTree}
+
+
+\subsection{Generating a Phylogenetic Tree}
+
+...
+
+When a phylogenetic tree is generated, new nodes and edges get
+created. In order to give you a chance at styling them, the following
+styles are executed:
+
+\begin{stylekey}{/graph drawing/phylogenetic inner node}
+  The style is added every newly created inner node. In this manual,
+  this key is set to:
+\begin{codeexample}[code only]
+\pgfgdset{phylogenetic inner node/.style={
+    /tikz/.cd, draw, circle, inner sep=0pt, minimum size=5pt
+  }
+}
+\end{codeexample}
+\end{stylekey}
+
+\begin{stylekey}{/graph drawing/phylogenetic edge=\meta{length}}
+  The style is added every newly created phylogenetic edge. The
+  \meta{length} will be set to the computed evolutionary length of the
+  edge. In this manual, this key is set to:
+\begin{codeexample}[code only]
+\pgfgdset{phylogenetic edge/.style={
+    /tikz/.cd, thick, rounded corners
+  }
+}
+\end{codeexample}
+\end{stylekey}
+
+
+\includeluadocumentationof{pgf.gd.phylogenetics.AuthorDefinedPhylogeny}
+\includeluadocumentationof{pgf.gd.phylogenetics.SokalMichener1958}
+\includeluadocumentationof{pgf.gd.phylogenetics.BalancedMinimumEvolution}
+\includeluadocumentationof{pgf.gd.phylogenetics.BalancedNearestNeighbourInterchange}
+
+
+\subsection{Laying out the Phylogram}
+
+\includeluadocumentationof{pgf.gd.phylogenetics.Maeusle2012}
+
+
+
+\endinput
+
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "pgfmanual-pdftex-version"
+%%% End: 
