@@ -91,7 +91,7 @@
 \usepackage{ifluatex}
 \ifluatex
 \usetikzlibrary{graphdrawing}
-\usegdlibrary{trees,circular,layered,examples,force,ogdf}
+\usegdlibrary{trees,circular,layered,examples,force,phylogenetics,ogdf}
 \else
 	\def\LuaTeX{Lua\TeX}%
 \fi
@@ -189,6 +189,7 @@
 %\include{pgfmanual-en-gd-layered}
 %\include{pgfmanual-en-gd-force}
 %\include{pgfmanual-en-gd-circular}
+%\include{pgfmanual-en-gd-phylogenetics}
 %\include{pgfmanual-en-gd-ogdf}
 %\include{pgfmanual-en-gd-algorithm-layer}
 %\include{pgfmanual-en-gd-algorithms-in-c}
@@ -604,6 +605,7 @@ Lua programming language.
 \include{pgfmanual-en-gd-layered}
 \include{pgfmanual-en-gd-force}
 \include{pgfmanual-en-gd-circular}
+\include{pgfmanual-en-gd-phylogenetics}
 \include{pgfmanual-en-gd-ogdf}
 \include{pgfmanual-en-gd-algorithm-layer}
 \include{pgfmanual-en-gd-algorithms-in-c}
