@@ -1,3 +1,9 @@
+2012-02-08 Till Tantau <tantau@users.sourceforge.net>
+	
+	- Reworked Storage mechanism of graph drawing system.
+	- Added phylogenetics library for graph drawing; documentation
+	still only rudimentary.
+	
 2012-12-30 Till Tantau <tantau@users.sourceforge.net>
 	
 	- Started adding support for calling C graph drawing functions
